--- a/main.gradle
+++ b/main.gradle
@@ -13,12 +13,23 @@ subprojects {
     apply plugin: 'jacoco'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'info.solidsoft.pitest'
+    apply plugin: "com.diffplug.spotless"
 
     compileJava.dependsOn validateStructure
 
     java {
         sourceCompatibility = JavaVersion.VERSION_21
         targetCompatibility = JavaVersion.VERSION_21
+    }
+
+    spotless {
+        java {
+            target("src/**/*.java")
+            googleJavaFormat("1.17.0")
+
+            removeUnusedImports()
+            importOrder("java", "jakarta", "org", "com")
+        }
     }
 
     //build.dependsOn 'pitest'
