--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -10,9 +10,9 @@ spring:
       enabled: true
       path: "/h2"
   flyway:
-    url: jdbc:postgresql://${adapters.r2dbc.host}:${adapters.r2dbc.port}/${adapters.r2dbc.database}
-    user: ${adapters.r2dbc.username}
-    password: ${adapters.r2dbc.password}
+    url: "jdbc:postgresql://${adapters.r2dbc.host}:${adapters.r2dbc.port}/${adapters.r2dbc.database}"
+    user: "${adapters.r2dbc.username}"
+    password: "${adapters.r2dbc.password}"
   profiles:
     include: null
 management:
@@ -43,8 +43,8 @@ routes:
 
 adapters:
   r2dbc:
-    host: "localhost"
-    port: 5432
-    database: "auth"
-    username: "crediya"
-    password: "P@55w0rd"
+    host: ${DB_HOST:localhost}
+    port: ${DB_PORT:5432}
+    database: ${DB_NAME:auth}
+    username: ${DB_USER:crediya}
+    password: ${DB_PASSWORD:P@55w0rd}
